# Lame

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hql/androidlame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hql/androidlame/: MainActivity.kt
app/src/test/java/com/hql/androidlame/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lame/: build.gradle.kts
lame/src/main/cpp/: CMakeLists.txt  Lames.cpp
lame/src/main/java/com/hql/lame/: LameUtils.kt
